--- a/index.html
+++ b/index.html
@@ -180,8 +180,11 @@ Read from a text file</h2>
 <div class="line">memset(name,0,<span class="keyword">sizeof</span>(name));</div>
 <div class="line">free(name);</div>
 </div><!-- fragment --><p>但會對效能造成負擔</p>
+<h1><a class="anchor" id="autotoc_md13"></a>
+Result</h1>
+<p><img src="https://user-images.githubusercontent.com/29009898/111070284-07174780-850c-11eb-94ae-6bc4ab86a209.png" alt="Screen Shot 2021-03-14 at 9 27 02 PM" class="inline"/></p>
 <hr  />
-<h1><a class="anchor" id="autotoc_md14"></a>
+<h1><a class="anchor" id="autotoc_md15"></a>
 Reference</h1>
 <ol type="1">
 <li>BigInt in C [<a href="https://gist.github.com/bloopletech/338338">gist</a>]</li>
