deploy: 75d49e46f805f68790ee2912a28a3c75a4cce114

--- a/index.html
+++ b/index.html
@@ -183,8 +183,14 @@ Read from a text file</h2>
 <h1><a class="anchor" id="autotoc_md13"></a>
 Result</h1>
 <p><img src="https://user-images.githubusercontent.com/29009898/111070284-07174780-850c-11eb-94ae-6bc4ab86a209.png" alt="Screen Shot 2021-03-14 at 9 27 02 PM" class="inline"/></p>
+<h1><a class="anchor" id="autotoc_md14"></a>
+Remarks</h1>
+<ol type="1">
+<li>Fastest implementation in class is <code>2ms</code> (mine: <code>6ms</code>)</li>
+<li>@sosiristseng recommends to store [0, 9999] in one <code>Int</code> to speed up the process. To say, merging the operation and exploiting the int data type can triple the speed.</li>
+</ol>
 <hr  />
-<h1><a class="anchor" id="autotoc_md15"></a>
+<h1><a class="anchor" id="autotoc_md16"></a>
 Reference</h1>
 <ol type="1">
 <li>BigInt in C [<a href="https://gist.github.com/bloopletech/338338">gist</a>]</li>
