deploy: bff1cf2be68fffe92a22b41ebee9103693d98fe9

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Result</h1>
 Remarks</h1>
 <ol type="1">
 <li>Fastest implementation in class is <code>2ms</code> (mine: <code>6ms</code>)</li>
-<li>@sosiristseng recommends to store [0, 9999] in one <code>Int</code> to speed up the process. To say, merging the operation and exploiting the int data type can triple the speed.</li>
+<li>@sosiristseng recommended to store [0, 9999] in one <code>Int</code> to speed up the process. To say, merging the operation and exploiting the int data type can triple the speed.</li>
 </ol>
 <hr  />
 <h1><a class="anchor" id="autotoc_md16"></a>
